--- a/Tests/app/config/config_test.yml
+++ b/Tests/app/config/config_test.yml
@@ -3,9 +3,11 @@ imports:
 
 framework:
     test: ~
-    router:     { resource: "%kernel.root_dir%/config/routing.yml" }
-    session:    { default_locale: %locale% }
-    translator: { fallback: %locale% }
+    router:
+        resource: "%kernel.root_dir%/config/routing.yml"
+    default_locale: %locale%
+    translator:
+        fallback: %locale%
 
 be_simple_i18n_routing:
     attribute_translator:
